# actix-graphql

./: Cargo.toml  README.md  docker-compose.yml
migrations/2020-10-06-043415_create_photos/: down.sql  up.sql
migrations/2020-10-06-070924_create_posts/: down.sql  up.sql
src/: main.rs  schema.rs
src/db/: loaders.rs  manager.rs  mod.rs  photo.rs  photo_repository.rs  post.rs  post_repository.rs
src/graphql/: schema.rs
