[package]
name = "graphql-sample"
version = "0.1.0"
authors = ["ebina4yaka <4yaka3bina@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.2"
actix-rt = "1.1.1"
juniper = { git = "https://github.com/graphql-rust/juniper" }
dotenv = "0.15.0"
env_logger = "0.7.1"
log = "0.4.11"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
r2d2 = "0.8.9"
r2d2_postgres = "0.16.0"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono"] }
chrono = "0.4.19"
futures = "0.3.6"
